# nix-prefetch-github

./: .coveragerc  .dir-locals.el  .gitignore  .test-prefetch  .travis.yml  MANIFEST.in  README.org  README.rst  clean  default.nix  flake.nix  format-code  generate-dependency-graph  generate-development-environment  generate-test-exec  pyproject.toml  release.sh  requirements.nix  requirements.txt  requirements_frozen.txt  requirements_override.nix  run-tests  setup.cfg  setup.py  shell.nix  test-exec.nix  test-exec_frozen.txt  test-prefetch  test-pypi-install  update-readme
.github/workflows/: python-tests.yml
docs/: README.rst  conf.py  index.rst
elisp/: update-readme.el
mypy-stubs/click/: __init__.pyi  _bashcomplete.pyi  _compat.pyi  _termui_impl.pyi  _textwrap.pyi  _unicodefun.pyi  _winconsole.pyi  core.pyi  decorators.pyi  exceptions.pyi  formatting.pyi  globals.pyi  parser.pyi  termui.pyi  types.pyi  utils.pyi
nix/: dev-shell.nix  nix-prefetch-github.nix  package-overrides.nix  pydeps.nix  stdlib-list.nix
nix_prefetch_github/: __init__.py  __main__.py  alerter.py  command.py  command_availability_checker.py  core.py  dependency_injector.py  effect.py  effects.py  error.py  fetch_directory.py  functor.py  github.py  hash.py  hash_converter.py  interfaces.py  io.py  list_remote.py  list_remote_factory.py  logging.py  prefetch.py  presenter.py  process_environment.py  public.py  remote_list_factory.py  repository.py  repository_detector.py  revision_index.py  revision_index_factory.py  templates.py  test_command_availability_checker.py  test_github.py  test_hash.py  test_hash_converter.py  test_list_remote.py  test_list_remote_factory.py  test_logging.py  test_prefetch.py  test_prefetch_options.py  test_presenter.py  (+10 more)
nix_prefetch_github/cli/: arguments.py  fetch_directory.py  fetch_github.py  fetch_latest_release.py  test_arguments.py
nix_prefetch_github/command/: command_availability_checker.py  command_runner.py  test_command_availability_checker.py  test_command_runner.py
nix_prefetch_github/controller/: arguments.py  nix_prefetch_github_controller.py  nix_prefetch_github_directory_controller.py  nix_prefetch_github_latest_release_controller.py  prefetch_directory_controller.py  prefetch_latest_release_controller.py  test_arguments.py  test_nix_prefetch_github_controller.py  test_nix_prefetch_github_directory_controller.py  test_nix_prefetch_github_latest_release_controller.py  test_prefetch_directory_controller.py  test_prefetch_latest_release_controller.py
nix_prefetch_github/core/: __init__.py  directory.py  effects.py  error.py  hash.py  prefetch.py  prefetch_directory.py  repository.py  revision.py  revision_index.py  test_directory.py  test_list_remote.py  test_prefetch.py  test_revision_index.py  url_hasher.py  wrapper.py
nix_prefetch_github/effects/: __init__.py  test_dispatcher.py
nix_prefetch_github/presenter/: __init__.py  repository_renderer.py  test_rendering_selector_impl.py  test_repository_renderer.py
nix_prefetch_github/public/: __init__.py  test_nix_prefetch_github.py
nix_prefetch_github/url_hasher/: __init__.py  nix_build.py  nix_prefetch.py  test_nix_prefetch_url_hasher.py  test_url_hasher.py  test_url_hasher_selector.py  url_hasher_selector.py
nix_prefetch_github/use_cases/: prefetch_directory.py  prefetch_github_repository.py  prefetch_latest_release.py  test_prefetch_github_repository.py
src/nix_prefetch_github/: __init__.py  effect.py  error.py  io.py  list_remote.py
src/nix_prefetch_github/templates/: nix-output.j2  prefetch-github.nix.j2
tests/: conftest.py  jraygauthier_nixos_secure_factory_git_ls_remote.txt  markers.py  performer_test.py  test_calculate_sha256_sum.py  test_dispatcher.py  test_error.py  test_execute_command.py  test_integration.py  test_issue_21.py  test_issue_22.py  test_list_remote.py  test_main.py  test_prefetch_github.py  test_prefetch_github_directory.py  test_prefetch_latest_release.py  test_url_hasher.py  url_hasher.py
tests/regression_tests/: sensu_go_git_ls_remote.txt  test_issue_21.py  test_issue_22.py
