[metadata]
name = nix-prefetch-github
author = Sebastian Jordan
author_email = sebastian.jordan.mail@googlemail.com
description = Prefetch source code from github for nix build tool
long_description = file: README.rst
version = file: nix_prefetch_github/VERSION
url = https://github.com/seppeljordan/nix-prefetch-github

[options]
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Topic :: Software Development :: Version Control :: Git
    Topic :: System :: Software Distribution
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
package_dir =
    nix_prefetch_github = nix_prefetch_github
packages =
    nix_prefetch_github
    nix_prefetch_github.core
    nix_prefetch_github.cli
install_requires =
    attrs
    click
    effect
include_package_data = True

[options.entry_points]
console_scripts =
    nix-prefetch-github = nix_prefetch_github.__main__:main
    nix-prefetch-github-directory = nix_prefetch_github.cli.fetch_directory:main
    nix-prefetch-github-latest-release = nix_prefetch_github.cli.fetch_latest_release:main

[mypy]
ignore_missing_imports = False
check_untyped_defs = True
files = .,test-pypi-install
mypy_path = mypy-stubs

[mypy-pytest,effect,effect.*,setuptools]
ignore_missing_imports = True

[flake8]
per-file-ignores =
    **/__init__.py:F401
ignore = E501,W503
exclude =
    .mypy_cache
    site-packages
filename =
    *.py
    ./test-pypi-install

[tool:pytest]
norecursedirs = result
markers =
    network: tests that require the internet
    requires_nix_build: tests that require nix-build to be available

[tool:isort]
known_third_party=attr,effect,click,pytest
profile = black
skip_glob =
    result/**
