[metadata]
name = nix-prefetch-github
author = Sebastian Jordan
author_email = sebastian.jordan.mail@googlemail.com
description = Prefetch source code from github for nix build tool
long_description = file: docs/README.rst
version = file: nix_prefetch_github/VERSION
url = https://github.com/seppeljordan/nix-prefetch-github

[options]
python_requires = >= 3.11
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Topic :: Software Development :: Version Control :: Git
    Topic :: System :: Software Distribution
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
package_dir =
    nix_prefetch_github = nix_prefetch_github
packages = find:
include_package_data = True

[options.entry_points]
console_scripts =
    nix-prefetch-github = nix_prefetch_github.__main__:main
    nix-prefetch-github-directory = nix_prefetch_github.cli.fetch_directory:main
    nix-prefetch-github-latest-release = nix_prefetch_github.cli.fetch_latest_release:main

[mypy]
check_untyped_defs = True
disallow_untyped_defs = True
files = .,test-pypi-install

[mypy-setuptools,mypyc.build,parameterized]
ignore_missing_imports = True

[flake8]
ignore = E501, W503, E704, E226
exclude =
    .mypy_cache
    site-packages
filename =
    *.py
    ./test-pypi-install

[tool:isort]
profile = black
skip_glob =
    result/**
